--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 	<head>
 		<title>MLB Scoreboard</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript" src="./services/viewFactory.js"></script>
